# gamebook-extractor

./: .gitignore  Dockerfile  README.md  pyproject.toml  scouter.py
.github/workflows/: deploy.yml
src/: app.py  scouter.py
src/catalog/: teams.py
src/models/: PlayEvent.py
